feat: 2524 sonar fixes